--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ img{
     background-color: red;
     width: 0%;
     height: 100%;
+    transition: .3s all ;
 }
 .time-duration{
     margin-top: 10px;
